--- a/index.html
+++ b/index.html
@@ -73,5 +73,5 @@
 
   <div class="id_collector"></div>
 
-  <script src="assets/dashboard.js?v=3.5"></script>
+  <script src="assets/index.js"></script>
 </body>
