--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="assets/dashboard.css?v=1.1" />
+  <link rel="stylesheet" href="assets/inxed.css?v=1.1" />
   <link
     rel="icon"
     type="image/x-icon"
